feat(auth): implement KeychainManager for secure credential storage
Adds secure storage of OAuth credentials and tokens using macOS Keychain:
- OAuthClientCredentials: stores user-provided Google Cloud OAuth credentials
- OAuthTokens: stores access/refresh tokens with expiration tracking
- KeychainManager actor: thread-safe CRUD operations with explicit kSecAttrService

Uses delete-before-save pattern for reliable overwrites across debug/release builds.
Comprehensive unit tests covering save, load, delete, and edge cases.

Closes gcn-29g

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,6 @@
 disabled_rules:
   - trailing_whitespace  # SwiftFormat handles
+  - trailing_comma       # SwiftFormat handles (enforces trailing commas)
   - todo                 # Allow during development
   - identifier_name      # Allow short closure names
 
