refactor(alerts): Extract AlertScheduler and AlertTypes from AlertEngine
Reduce AlertEngine.swift file length by extracting cohesive units:
- AlertScheduler.swift: AlertScheduler protocol and DispatchAlertScheduler
- AlertTypes.swift: AlertDelivery, AlertDowngradeReason, BackToBackAlertContext,
  MissedAlertResult, AlertError, and NoOpAlertDelivery

Also fixes:
- Disable SwiftLint opening_brace rule (conflicts with SwiftFormat)
- Fix force unwrap in MenuBuilderTests.swift
- Minor SwiftFormat fixes

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,7 @@
 disabled_rules:
   - trailing_whitespace  # SwiftFormat handles
   - trailing_comma       # SwiftFormat handles (enforces trailing commas)
+  - opening_brace        # SwiftFormat handles (wrapMultilineStatementBraces)
   - todo                 # Allow during development
   - identifier_name      # Allow short closure names
 
